add_executable(ConcurrentQueueTest ConcurrentQueueTest.cpp)
add_executable(LockFreeQueueTest LockFreeQueueTest.cpp)
add_executable(LockFreeStackTest LockFreeStackTest.cpp)
add_executable(SerialTest SerialTest.cpp)
add_executable(LogTest LogTest.cpp)
add_executable(SizesTest SizesTest.cpp)
add_executable(LockFreeTest LockFreeTest.cpp)

target_link_libraries(ConcurrentQueueTest Aim)
target_link_libraries(LockFreeQueueTest Aim)
target_link_libraries(LockFreeStackTest Aim)
target_link_libraries(SerialTest Aim)
target_link_libraries(LogTest Aim)
target_link_libraries(LockFreeTest Aim)

target_include_directories(ConcurrentQueueTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
target_include_directories(LockFreeQueueTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
target_include_directories(LockFreeStackTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
target_include_directories(SerialTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
target_include_directories(LogTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
target_include_directories(LockFreeTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
